This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.6 - not released yet
========================
+ Miscellaneous: Added button to export key bindings.
+ Formats: The spacebar can now be used to enable/disable formats.
* Updated FFmpeg (n0.8-16973-g55b243c)
* Updated Simplified Chinese translation