@@ -14,3 +14,7 @@ Legend:
 + Formats: The spacebar can now be used to enable/disable formats.
 * Updated FFmpeg (n0.8-16973-g55b243c)
 * Updated Simplified Chinese translation
+* More resilient support for MPL2 and SRT subtitles formats:
+  - Ticket #2779, Support MicroDVD tags in MPL2 subtitles files. This is normally not
+    supported but MPL2 files that use MicroDVD tags for formating are quite common.
+  - Support SRT files with missing millisecond part in the timecodes.
